--- a/templates/base.html
+++ b/templates/base.html
@@ -774,7 +774,12 @@
 </nav>
     {% block content %}
     {% endblock %}
-
+<ul style="padding auto auto;background-color:black;">
+<li style="padding auto auto;background-color:white;text-decoration:none;"><a class="nav-link"; href="{{url_for('home')}}">COVID PAGE</a></div></li><br>
+<li style="padding auto auto;background-color:white;text-decoration:none;"><a class="nav-link"; href="{{url_for('index')}}">NEWS PAGE</a></div></li><br>
+<li style="padding auto auto;background-color:white;text-decoration:none;"><a class="nav-link"; href="{{url_for('lol')}}">PRECAUIONS PAGE</a></div></li></br>
+<li style="padding auto auto;background-color:white;text-decoration:none;"><a class="nav-link"; href="{{url_for('about')}}">ABOUT PAGE</a></div></li>
+</ul>
 
   </body>
 </html>
